# LLMSP

./: 11_llmsp_protocol.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
benchmarks/: rag_benchmark.py
llmsp/: __init__.py  api.py  async_council.py  clerk.py  clerk_prompt.py  cli.py  council.py  crypto.py  dashboard.py  event_store.py  federation.py  finops.py  mcp_a2a.py  memory.py  models.py  persistent_registry.py  planner.py  principal.py  rag.py  red_team.py  router.py  security_auditor.py
llmsp/adapters/: __init__.py  base.py  claude.py  gemini.py  grok.py
llmsp/web/: index.html
llmsp/web/llmsp/: app.jsx  data.jsx  live.jsx  panels-bottom.jsx  panels-council.jsx  panels-top.jsx  primitives.jsx  settings.jsx
tests/: test_adapters.py  test_api.py  test_async_council.py  test_clerk.py  test_council.py  test_crypto.py  test_dashboard.py  test_event_store.py  test_federation.py  test_finops.py  test_integrations.py  test_mcp_a2a.py  test_memory.py  test_models.py  test_persistent_registry.py  test_planner.py  test_principal.py  test_rag.py  test_red_team.py  test_router.py  test_security_auditor.py
