[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmsp"
version = "0.1.0"
description = "LLM Swarm Protocol — A protocol for multi-agent AI collaboration"
readme = "11_llmsp_protocol.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "David Cappelli", email = "davidcappelli@vecplabs.com"},
]
keywords = ["llm", "multi-agent", "swarm", "protocol", "ai"]

dependencies = [
    "pydantic>=2.0",
    "cryptography>=42.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
llmsp = "llmsp.cli:main"

[tool.setuptools.packages.find]
include = ["llmsp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
